--- a/index.html
+++ b/index.html
@@ -14,5 +14,24 @@
     />
     <title>Gallery</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="card">
+        <img src="" />
+        <p></p>
+      </div>
+      <div class="card">
+        <img src="" />
+        <p></p>
+      </div>
+      <div class="card">
+        <img src="" />
+        <p></p>
+      </div>
+      <div class="card">
+        <img src="" />
+        <p></p>
+      </div>
+    </div>
+  </body>
 </html>
