add images and paragraph

--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
   <body>
     <div class="container">
       <div class="card">
-        <img src="" />
-        <p></p>
+        <img src="./assets/01.jpg" />
+        <p>Lorem ipsum dolor sit amet.</p>
       </div>
       <div class="card">
-        <img src="" />
-        <p></p>
+        <img src="./assets/02.jpg" />
+        <p>Lorem ipsum dolor sit amet.</p>
       </div>
       <div class="card">
-        <img src="" />
-        <p></p>
+        <img src="./assets/03.jpg" />
+        <p>Lorem ipsum dolor sit amet.</p>
       </div>
       <div class="card">
-        <img src="" />
-        <p></p>
+        <img src="./assets/04.jpg" />
+        <p>Lorem ipsum dolor sit amet.</p>
       </div>
     </div>
   </body>
